@@ -58,6 +58,7 @@ Improvements:
 	Added hover to GP Research icons showing the preferred order
 - Unit Naming
 	Unnamed initial units are named when you found your capital
+	Units from tribal villages (goody huts) are named
 	Random names can now be mixed with other naming codes or static text
 
 Bug Fixes:
